# diplomacy-v2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  app.py  axiom-dashboard.json  grpo.md  perf_optimization.md  pyproject.toml  pyrightconfig.json  sim_chaosbot.html  sim_llmagent.html  sim_randombot.html  simulation_report.html  todo.md  web-app-plan.md
.claude/plans/: transient-sleeping-blossom.md
.cursor/commands/: analyze-experiment.md  fix-ci.md
.cursor/rules/: development.mdc  diplomacy_grpo.mdc
.github/workflows/: ci.yml
docs/: axiom_dashboard_queries.md  cloud-infra-research.md  experiment-tracker.md  inference-optimization-research.md  infra.md  league_training.md  perf_optimization.md  power-laws.md  testing_plan.md  todo.md  trajectory-grouping.md  wandb_cli_reference.md
evals/: __init__.py  evaluator.py  league.py
experiments/: experiment-tracker.md
experiments/configs/: golden-v1.yaml
experiments/notes/: stratification-vs-value-baselines.md
scripts/: axiom_cli.py  benchmark_adapter_batching.py  benchmark_logits_processor.py  benchmark_rollouts.py  benchmark_single_game.py  benchmark_training.py  debug_logprobs_flow.py  generate_state_cache.py  init_benchmarks.py  launch_sweep.py  launch_training.py  local_sim_check.py  local_sim_check_llm.py  profile_rollout.py  prompt_tinkerer.py  run_benchmark_eval.py  run_eval.py  run_web_backend.sh  run_web_frontend.sh  test_minimal_prompts.py  wandb_cli.py
src/agents/: __init__.py  base.py  baselines.py  llm_agent.py
src/apps/: deploy.py
src/engine/: wrapper.py
src/inference/: logits.py
src/league/: __init__.py  benchmarks.py  elo.py  logging.py  matchmaker.py  registry.py  trueskill_rating.py  types.py
src/training/: loss.py  trainer.py
src/utils/: config.py  git.py  observability.py  parsing.py  (+6 more)
tests/: conftest.py  test_dumbbot.py  test_engine.py  test_league_registry.py  test_logits_processor.py  test_matchmaker.py  test_multi_adapter.py  test_parsing.py  test_perf_optimizations.py  test_preflight.py  test_rpc.py  test_scoring.py  test_sweep_config.py  test_training.py
web/: README.md
(+59 files in other folders)
