[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diplomacy-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diplomacy>=1.1.2",
    "modal>=1.2.4",
    "peft>=0.18.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
